--- a/src/main/resources/fxml/RootLayout.fxml
+++ b/src/main/resources/fxml/RootLayout.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 
-
 <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="500.0" spacing="10.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nikolay.connmodule.ui.controllers.RootLayoutController">
    <children>
-      <TextField fx:id="fieldIP" />
-      <TextField fx:id="portField" />
+      <TextField fx:id="fieldIP" prefHeight="26.0" prefWidth="171.0" />
+      <TextField fx:id="portField" prefHeight="26.0" prefWidth="75.0" />
       <Button fx:id="connectBtn" mnemonicParsing="false" text="Connect" />
+      <Label fx:id="connectLabel" />
    </children>
 </HBox>
