--- a/src/main/resources/fxml/RootLayout.fxml
+++ b/src/main/resources/fxml/RootLayout.fxml
@@ -1,15 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="500.0" spacing="10.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nikolay.connmodule.ui.controllers.RootLayoutController">
+<VBox prefHeight="200.0" prefWidth="525.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.nikolay.connmodule.ui.controllers.RootLayoutController">
    <children>
-      <TextField fx:id="fieldIP" prefHeight="26.0" prefWidth="171.0" />
-      <TextField fx:id="portField" prefHeight="26.0" prefWidth="75.0" />
-      <Button fx:id="connectBtn" mnemonicParsing="false" text="Connect" />
-      <Label fx:id="connectLabel" />
+      <HBox alignment="CENTER" prefHeight="105.0" prefWidth="454.0" spacing="10.0">
+         <children>
+            <TextField fx:id="fieldIP" prefHeight="28.0" prefWidth="136.0" />
+            <TextField fx:id="portField" prefHeight="26.0" prefWidth="75.0" />
+            <Button fx:id="connectBtn" mnemonicParsing="false" text="Connect" />
+            <Label fx:id="connectLabel" />
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Label fx:id="flowMeterLabel" text="Flow Meter Version">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </Label>
+            <Label fx:id="flowMeterVersionLabel" text="None">
+               <HBox.margin>
+                  <Insets left="30.0" />
+               </HBox.margin>
+            </Label>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <Label fx:id="delayLabel" text="Delay">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="delayAmountLabel" prefHeight="26.0" prefWidth="55.0" />
+            <Label fx:id="countLabel" text="Count">
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Label>
+            <TextField fx:id="countAmountLabel" prefHeight="26.0" prefWidth="51.0">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </TextField>
+         </children>
+      </HBox>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+         <children>
+            <ToggleButton fx:id="startToggleButton" mnemonicParsing="false" onAction="#startBtnOnClick" text="ToggleButton" />
+         </children>
+      </HBox>
    </children>
-</HBox>
+</VBox>
